[package]
name = "riprip"
version = "0.0.9"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.70"
description = "A specialized audio CD-ripper optimized for incremental data recovery."
repository = "https://github.com/Blobfolio/riprip"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2022, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "sound"
extended-description = """\
.\n\
Rip Rip Hooray! is an audio CD-ripper optimized for incremental data recovery."""
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/riprip", "usr/bin/", "755"],
    ["../release/completions/riprip.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/riprip.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Rip Rip Hooray!"
bash-dir = "../release/completions"
man-dir = "../release/man"
credits-dir = "../"

[[package.metadata.bashman.switches]]
long = "--backwards"
description = "Request sectors from the drive in reverse order, starting from the end of each track, and ending at the start."

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
long = "--no-c2"
description = "Disable/ignore C2 error pointer information when ripping, e.g. for drives that do not support the feature. (This flag is otherwise not recommended.)"

[[package.metadata.bashman.switches]]
long = "--no-cache-bust"
description = "Do not attempt to moot the optical drive cache before each rip pass."

[[package.metadata.bashman.switches]]
long = "--no-resume"
description = "Ignore any previous rip states; start over from scratch."

[[package.metadata.bashman.switches]]
long = "--no-rip"
description = "Print the basic drive and disc information to STDERR and exit (without ripping anything)."

[[package.metadata.bashman.switches]]
long = "--no-summary"
description = "Skip the drive and disc summary and jump straight to ripping."

[[package.metadata.bashman.switches]]
long = "--raw"
description = "Save ripped tracks in raw PCM format (instead of WAV)."

[[package.metadata.bashman.switches]]
long = "--reset-counts"
description = "Reset all previously-collected sample counts, allowing their sectors to be re-read (provided --cutoff is at least two)."

[[package.metadata.bashman.switches]]
long = "--strict"
description = "Treat C2 errors as an all-or-nothing proposition for the sector as a whole rather than judging each individual sample on its own. This is most effective when set for all rip passes (rather than being turned on after several runs have already completed)."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version."

[[package.metadata.bashman.options]]
long = "--confidence"
label = "<NUM>"
description = "Consider a track accurately ripped — i.e. stop working on it — AccurateRip and/or CUETools matches are found with a confidence of at least <NUM>. [default: 3; range: 3..=10]"

[[package.metadata.bashman.options]]
long = "--cutoff"
label = "<NUM>"
description = "Consider allegedly-good samples 'likely' once the same value has been read at least <NUM> times and twice as often as any competing values. Sectors containing only likely/confirmed samples are skipped during subsequent passes, so the lower the cutoff, the faster they'll go. Higher values are recommended for wishywashy drives. [default: 2; range: 1..=32]"

[[package.metadata.bashman.options]]
short = "-d"
long = "--dev"
label = "<PATH>"
description = "The device path for the optical drive containing the CD of interest, like /dev/cdrom. [default: auto]"
path = true

[[package.metadata.bashman.options]]
short = "-o"
long = "--offset"
label = "<SAMPLES>"
description = "The AccurateRip, et al, sample read offset to apply to data retrieved from the drive. [default: auto or 0; range: ±5880]"

[[package.metadata.bashman.options]]
short = "-r"
long = "--refine"
label = "<NUM>"
description = "Automatically execute up to <NUM> additional rip passes for each track while any samples remain unread or unconfirmed. [default: 0; max: 32]"

[[package.metadata.bashman.options]]
short = "-t"
long = "--track"
label = "<NUM>"
description = "Rip one or more specific tracks (rather than the whole disc). Multiple tracks can be separated by commas (2,3), specified as an inclusive range (2-3), and/or given their own -t/--track (-t 2 -t 3). Include track 0 to rip the HTOA (if any). [default: the whole disc]"
duplicate = true

[dependencies]
argyle = "0.6.*"
ctrlc = "3.4.*"
dactyl = "0.5"
oxford_join = "0.2.*"
trimothy = "0.1.*"

[dependencies.fyi_msg]
version = "0.11.*"
features = [ "progress" ]

[dependencies.riprip_core]
path = "../riprip_core"
features = [ "bin" ]
