[package]
name = "riprip"
version = "0.0.9"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.70"
description = "A specialized audio CD-ripper optimized for incremental data recovery."
repository = "https://github.com/Blobfolio/riprip"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2022, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "sound"
extended-description = """\
.\n\
Rip Rip Hooray! is an audio CD-ripper optimized for incremental data recovery."""
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/riprip", "usr/bin/", "755"],
    ["../release/completions/riprip.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/riprip.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Rip Rip Hooray!"
bash-dir = "../release/completions"
man-dir = "../release/man"
credits-dir = "../"

[[package.metadata.bashman.switches]]
long = "--backwards"
description = "Reverse the sector read order when ripping, starting at end of each track, and ending at the start."

[[package.metadata.bashman.switches]]
long = "--c2-strict"
description = "Treat C2 errors as an all-or-nothing proposition for the sector as a whole rather than judging each individual sample on its own. This is most effective when set for all rip passes (rather than being turned on after several runs have already completed)."

[[package.metadata.bashman.switches]]
long = "--flip-flop"
description = "Alternate the sector read order between passes, forwards then backwards then forwards then backwards… This has no effect unless -p/--passes is at least two."

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
long = "--no-c2"
description = "C2 error pointers are used to help verify the accuracy of the returned data, but if your drive doesn't support the feature or implement it correctly, set this flag to disable/ignore them."

[[package.metadata.bashman.switches]]
long = "--no-resume"
description = "Ignore any previous rip states; start over from scratch."

[[package.metadata.bashman.switches]]
long = "--no-rip"
description = "Print the basic drive and disc information to STDERR and exit (without ripping anything)."

[[package.metadata.bashman.switches]]
long = "--no-summary"
description = "Skip the drive and disc summary and jump straight to ripping."

[[package.metadata.bashman.switches]]
long = "--reset-counts"
description = "Reset all previously-collected sample counts, allowing their sectors to be re-read (provided --cutoff is at least two)."

[[package.metadata.bashman.switches]]
long = "sync"
description = "Confirm sector positioning with subchannel data (when available) to make sure the drive is actually reading from the right place, or require it be re-read on subsequent passes. Subchannel data is easily corrupted, so this will usually produce a lot of false positives, but can be useful in cases where disc rot rather than wear-and-tear is the sole cause of readability issues."

[[package.metadata.bashman.switches]]
long = "--sync-strict"
description = "Same as --sync, but mark all affected samples as bad regardless of their C2 status."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version."

[[package.metadata.bashman.options]]
long = "--confidence"
label = "<NUM>"
description = "Consider a track accurately ripped — i.e. stop working on it — AccurateRip and/or CUETools matches are found with a confidence of at least <NUM>. [default: 3; range: 3..=10]"

[[package.metadata.bashman.options]]
short = "-d"
long = "--dev"
label = "<PATH>"
description = "The device path for the optical drive containing the CD of interest, like /dev/cdrom. [default: auto]"
path = true

[[package.metadata.bashman.options]]
short = "-o"
long = "--offset"
label = "<SAMPLES>"
description = "The AccurateRip, et al, sample read offset to apply to data retrieved from the drive. [default: auto or 0; range: ±5880]"

[[package.metadata.bashman.options]]
short = "-p"
long = "--passes"
label = "<NUM>"
description = "Automate re-ripping by executing up to <NUM> passes for each track while any samples remain unread or unconfirmed. [default: 1; max: 16]"

[[package.metadata.bashman.options]]
short = "-r"
long = "--rereads"
label = "<[ABS],[MUL]>"
description = "Consider allegedly-good samples 'likely' once the same value has been read at least <ABS> times, and <MUL> times more often than all competing values. You can omit a value on either side of the comma to use the default, or provide a number with no commas to only change <ABS>. Likely sectors are skipped on subsequent passes, so the lower the value(s), the faster those passes will go. [default: 2,2; range: 1..=20,1..=10]"

[[package.metadata.bashman.options]]
short = "-t"
long = "--track"
label = "<NUM>"
description = "Rip one or more specific tracks (rather than the whole disc). Multiple tracks can be separated by commas (2,3), specified as an inclusive range (2-3), and/or given their own -t/--track (-t 2 -t 3). Track 0 can be used to rip the HTOA, if any. [default: the whole disc]"
duplicate = true

[dependencies]
argyle = "0.6.*"
ctrlc = "3.4.*"
dactyl = "0.5"
oxford_join = "0.2.*"
trimothy = "0.1.*"

[dependencies.fyi_msg]
version = "0.11.*"
features = [ "progress" ]

[dependencies.riprip_core]
path = "../riprip_core"
features = [ "bin" ]
