[package]
name = "riprip"
version = "0.1.5"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.70"
description = "A specialized audio CD-ripper optimized for incremental data recovery."
repository = "https://github.com/Blobfolio/riprip"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2022, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "sound"
extended-description = """\
.\n\
Rip Rip Hooray! is an audio CD-ripper optimized for incremental data recovery."""
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/riprip", "usr/bin/", "755"],
    ["../release/completions/riprip.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/riprip.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Rip Rip Hooray!"
bash-dir = "../release/completions"
man-dir = "../release/man"
credits-dir = "../"

[[package.metadata.bashman.switches]]
long = "--backwards"
description = "Reverse the sector read order when ripping a track, starting at end, and ending at the start."

[[package.metadata.bashman.switches]]
long = "--flip-flop"
description = "Alternate the sector read order between passes, forwards then backwards then forwards then backwards… This has no effect unless -p/--passes is at least two."

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information to STDOUT and exit."

[[package.metadata.bashman.switches]]
long = "--no-resume"
description = "Ignore any previous rip states, starting over from scratch."

[[package.metadata.bashman.switches]]
long = "--no-rip"
description = "Print the basic drive and disc information to STDERR and exit (without ripping anything)."

[[package.metadata.bashman.switches]]
long = "--no-summary"
description = "Skip the drive and disc summary and jump straight to ripping."

[[package.metadata.bashman.switches]]
long = "--reset"
description = "Flip 'likely' samples back to 'maybe', keeping their values, but resetting all counts to one. This is a softer alternative to --no-resume, and will not affect tracks confirmed by AccurateRip/CUETools."

[[package.metadata.bashman.switches]]
long = "--strict"
description = "Consider C2 errors an all-or-nothing proposition for the sector as a whole, marking all samples bad if any of them are bad. This is most effective when applied consistently from the initial rip and onward."

[[package.metadata.bashman.switches]]
long = "sync"
description = "Confirm sector positioning with subchannel data (when available) to make sure the drive is actually reading from the right place, and ignore the data if not. This is prone to false-positives — subchannel data is easily corrupted — so only recommended when disc rot, rather than wear-and-tear, is the sole cause of your woes."

[[package.metadata.bashman.switches]]
short = "-v"
long = "--verbose"
description = "Print detailed sector quality information to STDOUT, so it can e.g. be piped to a file for review, like: riprip -v > issues.log"

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print version information to STDOUT and exit."

[[package.metadata.bashman.options]]
short = "-c"
long = "--cache"
label = "<NUM>"
description = "Drive cache can interfere with re-read accuracy. If your drive caches data, use this option to specify its buffer size so Rip Rip can try to mitigate it. Values with an M suffix are treated as MiB, otherwise KiB are assumed. [default: auto or 0; max: 65,535]"

[[package.metadata.bashman.options]]
long = "--confidence"
label = "<NUM>"
description = "Consider a track accurately ripped — i.e. stop working on it — AccurateRip and/or CUETools matches are found with a confidence of at least <NUM>. [default: 3; range: 3..=10]"

[[package.metadata.bashman.options]]
short = "-d"
long = "--dev"
label = "<PATH>"
description = "The device path for the optical drive containing the CD of interest, like /dev/cdrom. [default: auto]"
path = true

[[package.metadata.bashman.options]]
short = "-o"
long = "--offset"
label = "<SAMPLES>"
description = "The AccurateRip, et al, sample read offset to apply to data retrieved from the drive. [default: auto or 0; range: ±5880]"

[[package.metadata.bashman.options]]
short = "-p"
long = "--passes"
label = "<NUM>"
description = "Automate re-ripping by executing up to <NUM> passes for each track while any samples remain unread or unconfirmed. [default: 1; max: 16]"

[[package.metadata.bashman.options]]
short = "-r"
long = "--rereads"
label = "<[ABS],[MUL]>"
description = "Re-read sectors on subsequent passes until A) they have been independently verified with AccurateRip or CUETools; or B) the same allegedly-good values have been read at least <ABS> times, and <MUL> times more often than any contradictory 'good' values. The value may omit the number on either side of the comma to keep the default, or be a single number to alter only the <ABS>. [default: 2,2; range: 1..=20,1..=10]"

[[package.metadata.bashman.options]]
short = "-t"
long = "--tracks"
label = "<NUM>"
description = "Rip one or more specific tracks (rather than the whole disc). Multiple tracks can be separated by commas (2,3), specified as an inclusive range (2-3), and/or given their own -t/--track (-t 2 -t 3). Track 0 can be used to rip the HTOA, if any. [default: the whole disc]"
duplicate = true

[dependencies]
argyle = "0.6.*"
ctrlc = "3.4.*"
dactyl = "0.5"
oxford_join = "0.2.*"
trimothy = "0.1.*"
utc2k = "0.6.*"

[dependencies.fyi_msg]
version = "0.11.*"
features = [ "progress" ]

[dependencies.riprip_core]
path = "../riprip_core"
features = [ "bin" ]
