[package]
name = "riprip_core"
version = "0.3.3"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "The library for Rip Rip Hooray."
repository = "https://github.com/Blobfolio/riprip"
readme = "README.md"
publish = false

[dependencies]
cdtoc = "0.8.*"
crc32fast = "=1.4.2"
dactyl = "0.10.*"
oxford_join = "0.5.*"
tempfile = "3.8.0"
trimothy = "0.7.*"
utc2k = "0.12.*"

[dependencies.fyi_msg]
version = "2.0.*"
features = [ "signals" ]

[dependencies.libcdio-sys]
version = "=0.5.2"
default-features = false
features = [ "cdio" ]

[dependencies.minreq]
version = "2.13.*"
default-features = false
# Neither AccurateRip nor CTDB use SSL for whatever
# reason so we don't need any minreq features at all!

[build-dependencies]
dactyl = "0.10.*"
oxford_join = "0.5.*"

[build-dependencies.cdtoc]
version = "0.8.*"
default-features = false
features = [ "accuraterip" ]

[build-dependencies.minreq]
version = "2.13.*"
default-features = false

[dev-dependencies]
fastrand = "2"

[features]
default = []

# This feature adds a few generic RipRipError types for the binary.
# It is not something external crates need to worry about.
bin = []
