[package]
name = "riprip_core"
version = "0.4.3"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "The library for Rip Rip Hooray."
repository = "https://github.com/Blobfolio/riprip"
readme = "README.md"
publish = false

[dependencies]
cdtoc = "0.11.*"
crc32fast = "=1.5.0"
dactyl = "0.13.*"
oxford_join = "0.7.*"
tempfile = "3.8.0"
trimothy = "0.9.*"
utc2k = "0.17.*"

[dependencies.fyi_msg]
version = "2.3.*"
features = [ "signals" ]

[dependencies.libcdio-sys]
version = "=1.0.0"
default-features = false

[dependencies.minreq]
version = "2.14.*"
default-features = false
# Neither AccurateRip nor CTDB use SSL for whatever
# reason so we don't need any minreq features at all!

[build-dependencies]
dactyl = "0.13.*"
oxford_join = "0.7.*"

[build-dependencies.cdtoc]
version = "0.11.*"
default-features = false
features = [ "accuraterip" ]

[build-dependencies.libcdio-sys]
version = "=1.0.0"
default-features = false

[build-dependencies.minreq]
version = "2.14.*"
default-features = false

[dev-dependencies]
fastrand = "2"

[features]
default = []

# This feature adds a few generic RipRipError types for the binary.
# It is not something external crates need to worry about.
bin = []
